# http-server-cpp

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  debug.sh  run.ps1  run.sh
src/: helpers.hpp  httpserver.cpp  httpserver.hpp  main.cpp
src/http/: httpcode.hpp  httpmethod.hpp  httprequest.cpp  httprequest.hpp  httpresponse.cpp  httpresponse.hpp
src/server/: httpserver.cpp  httpserver.hpp  router.cpp  router.hpp  socket_wrapper.hpp
tests/: tests_httprequest.cpp  tests_httpresponse.cpp  tests_router.cpp
www/: about.html  index.html  script.js  styles.css
